# emerald-city

./: Cargo.toml  Rocket.toml  debug.bat  deploy.bat  do.bat  index.js  package.bat
src/: api.rs  common.rs  lib.rs
src/curv/: mod.rs
src/curv/arithmetic/: big_gmp.rs  mod.rs  num_big.rs  num_bigint.rs  traits.rs
src/curv/arithmetic/big_native/: ring_algorithms.rs
src/curv/arithmetic/num_bigint/: ring_algorithms.rs  samplable.rs  serde_support.rs
src/curv/cryptographic_primitives/commitments/: hash_commitment.rs  pedersen_commitment.rs  traits.rs
src/curv/cryptographic_primitives/hashing/: ext.rs  hash_sha256.rs  merkle_tree.rs  mod.rs  traits.rs
src/curv/cryptographic_primitives/proofs/: low_degree_exponent_interpolation.rs  sigma_correct_homomorphic_elgamal_enc.rs  sigma_correct_homomorphic_elgamal_encryption_of_dlog.rs  sigma_dlog.rs  sigma_ec_ddh.rs  sigma_valid_pedersen.rs  sigma_valid_pedersen_blind.rs
src/curv/cryptographic_primitives/secret_sharing/: feldman_vss.rs  polynomial.rs
src/curv/cryptographic_primitives/twoparty/: coin_flip_optimal_rounds.rs  dh_key_exchange.rs  dh_key_exchange_variant_with_pok_comm.rs
src/curv/elliptic/curves/: curve_ristretto.rs  ed25519.rs  mod.rs  p256.rs  secp256_k1.rs  traits.rs
src/curv/elliptic/curves/bls12_381/: g1.rs  g2.rs  pairing.rs  scalar.rs
src/curv/elliptic/curves/wrappers/: encoded_point.rs  error.rs  point.rs  scalar.rs  serde_support.rs
src/gg_2018/: dLogstatement.rs  mod.rs  mta.rs  party_i.rs  range_proofs.rs  test.rs
src/paillier/: core.rs  keygen.rs  mod.rs  serialize.rs
src/paillier/encoding/: integral.rs  mod.rs
src/paillier/zkproofs/: correct_key_ni.rs
tests/: Cargo.toml  keygen-tn.rs  lib.rs
tests/common/: mod.rs
