[package]
name = "emerald-city"
version = "0.2.1"

authors = [
    "Omer <omer@kzencorp.com>"
]
description = "WASM/HW-friendly lightweight client application for threshold ECDSA"
homepage = "https://github.com/KZen-networks"
repository = "https://github.com/KZen-networks/emerald-city"
license = "GPL-3.0-or-later"


[lib]
# crate-type = ["bin", "staticlib", "lib", "cdylib"]
# crate-type = ["staticlib"]
crate-type = ["staticlib", "lib", "cdylib"]
# crate-type = ["lib"]
# crate-type = ["dylib"]
# crate-type = ["bin"]

[features]
gmp = ["rust-gmp"]
num = ["num-bigint"]
default = ["gmp"] 

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version="0.6", features = ["wasm-bindgen"] }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

bit-vec = "0.6"
cryptoxide = "0.1.1"
zeroize = "0.9"

rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp", optional = true }
num-bigint = { version = "0.2.2", features = ["serde", "rand"], optional = true }
num-integer = { version = "0.1"}
num-traits = { version = "0.2"}

[dependencies.secp256k1]
version = "0.13.1"
features = ["rand", "serde"]
# git= "https://github.com/vhnatyk/rust-secp256k1" 
# branch="dev/vhnat/new_master"
path="../../Projects/Repos/rust-secp256k1"

trallocator = { path = "./trallocator" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.2"

[[bench]]
name = "keygen"
path = "tests/keygen-tn.rs"
harness = false

[[bench]]
name = "sign"
path = "tests/sign-tn.rs"
harness = false

[[bin]]
name="bn1"
path="tests/common/mod.rs"

[profile.release]
panic = 'abort'
lto = true
# codegen-units = 1