[package]
name = "emerald-city"
version = "0.2.0"

authors = [
    "Omer <omer@kzencorp.com>"
]
description = "WASM/HW-friendly lightweight client application for threshold ECDSA"
homepage = "https://github.com/KZen-networks"
repository = "https://github.com/KZen-networks/emerald-city"
license = "GPL-3.0-or-later"


[lib]
crate-type = ["staticlib", "lib"]


[dependencies]
hex = "0.3.2"
subtle = {version = "2", features = ["nightly"]}
reqwest = {version = "0.9.5", default-features = false}
rocket = "0.4.0"
rocket_contrib = "0.4.0"
uuid = { version = "0.7", features = ["v4"] }
rust-crypto = "^0.2"

rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

num-bigint = {version = "0.2.2" , features = ["serde","rand"]}
num-integer = "0.1"
num-traits = "0.2.6"


bit-vec = "0.5"
cryptoxide = "0.1.1"
zeroize = "0.5.2"

libsecp256k1 = "0.2.2"

